   - DPDK:
     * New option 'other_config:dpdk-socket-limit' to limit amount of
       hugepage memory that can be used by DPDK.
     * Add support for vHost Post-copy Live Migration (experimental).
     * OVS validated with DPDK 18.11.1 which is recommended to be used.
   - OpenFlow:
     * Removed support for OpenFlow 1.6 (draft), which ONF abandoned.
     * New action "check_pkt_larger".
   - Userspace datapath:
     * ICMPv6 ND enhancements: support for match and set ND options type
       and reserved fields.
     * Add v4/v6 fragmentation support for conntrack.
     * New ovs-appctl "dpctl/ipf-set-enabled" and "dpctl/ipf-set-disabled"
       commands for userspace datapath conntrack fragmentation support.
     * New "ovs-appctl dpctl/ipf-set-min-frag" command for userspace
       datapath conntrack fragmentation support.
     * New "ovs-appctl dpctl/ipf-set-max-nfrags" command for userspace datapath
       conntrack fragmentation support.
     * New "ovs-appctl dpctl/ipf-get-status" command for userspace datapath
       conntrack fragmentation support.
     * New action "check_pkt_len".
     * Port configuration with "other-config:priority-tags" now has a mode
       that retains the 802.1Q header even if VLAN and priority are both zero.
   - OVSDB:
     * OVSDB clients can now resynchronize with clustered servers much more
       quickly after a brief disconnection, saving bandwidth and CPU time.
       See section 4.1.15 of ovsdb-server(7) for details of related OVSDB
       protocol extension.
   - OVN:
     * IPAM/MACAM:
       - select IPAM mac_prefix in a random manner if not provided by the user
       - add the capability to specify a static IPv4 and/or IPv6 address and
         get the L2 one allocated dynamically using the following syntax:
           ovn-nbctl lsp-set-addresses <port> "dynamic <IPv4 addr> <IPv6 addr>"
     * Added the HA chassis group support.
     * Added 'external' logical port support.